# fireup

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  PROJECT_STATUS.md  README.md  build.rs  docker-compose.yml  init.sql  test_schema.sql
.github/: ISSUE_RE_ENABLE_CI.md  copilot-instructions.md
.github/workflows/: integration_tests.yml
.kiro/specs/firestore-postgres-migration/: design.md  requirements.md  tasks.md
docs/: INTEGRATION_TESTING.md
examples/: TESTING_GUIDE.md
examples/backup_files/: README.md
proto/google/datastore/admin/v1/: admin.proto
proto/google/datastore/v1/: entity.proto  query.proto
scripts/: run_integration_tests.sh  test_deployment.sh
sql/: 01_development_setup.sql
src/: error.rs  lib.rs  main.rs  monitoring.rs  types.rs
src/data_importer/: importer.rs  mod.rs  sql_generator.rs  tests.rs  transformer.rs  type_mapper.rs
src/leveldb_parser/: mod.rs  parser.rs  tests.rs  validator.rs
src/protos/: mod.rs
src/schema_analyzer/: analyzer.rs  constraint_analyzer.rs  constraint_generator.rs  ddl_generator.rs  ddl_output.rs  index_generator.rs  mod.rs  normalizer.rs  tests.rs  type_conflict_resolver.rs
tests/: DEPLOYMENT_TESTING.md  deployment_tests.rs  integration_tests.rs
tests/.firestore-data/: firebase-export-metadata.json
tests/.firestore-data/firestore_export/: firestore_export.overall_export_metadata
tests/.firestore-data/firestore_export/all_namespaces/all_kinds/: all_namespaces_all_kinds.export_metadata  output-0
tests/data-generator/: README.md  SAMPLE_DATA_PLAN.md  firebase.json  package-lock.json  package.json
tests/data-generator/src/: level1_two_primitives.ts  level2_two_rows.ts  level3_two_primitives_two_rows.ts  level4_arrays.ts  main.ts  run-generator.ts  tiny.ts
tests/functional-tests/: README.md  integration_tests.rs  level1_tests.rs  level2_tests.rs  level3_tests.rs  level4_tests.rs  mod.rs  parser_tests.rs  run_tests.sh  sample_data_test.rs  test_utils.rs  tiny_tests.rs  validation_tests.rs  verify_sample_data.py
