[package]
name = "fireup"
version = "0.1.0"
edition = "2021"
description = "Migration tool for Firestore to PostgreSQL with dual compatibility"
authors = ["Fireup Team"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# PostgreSQL client
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# File parsing (will implement custom LevelDB parser)
bytes = "1.5"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.7"
dashmap = "5.5"

# SQL parsing
sqlparser = "0.39"

[dev-dependencies]
tempfile = "3.8"